adds checkbox to romove pluto from dropdown, adds inputs for new planet in dropdown

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
         <p>Select your planet here</p>
         <select id='planets'>
         </select>
+        <input type='checkbox' id='checkbox' >
+        <p>If you wish to remove Pluto from the list check this box</p>
+      </div>
+      <div id='new-planet-container'>
+        <input id='new-planet-name' type='text' placeholder='New Planet'>
+        <input id='new-multiplier' type='number' placeholder='New Multiplier'>
+        <button id='new-planet-button'>Add new planet</button>
       </div>
     </div>
     <div id='button-container'>
